--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h1 class="title">Tic Tac Toe</h1>
         <h2>Result : <span id="result"></span></h2>
         <div class="container" id="container">
+            <div class="card pointer" data-index="0"></div>
             <div class="card pointer" data-index="1"></div>
             <div class="card pointer" data-index="2"></div>
             <div class="card pointer" data-index="3"></div>
@@ -37,10 +38,9 @@
             <div class="card pointer" data-index="6"></div>
             <div class="card pointer" data-index="7"></div>
             <div class="card pointer" data-index="8"></div>
-            <div class="card pointer" data-index="9"></div>
         </div>
         <h1 class="turn" id="turn"></h1>
-        <button class="reset">Reset</button>
+        <button class="reset" id="reset">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
