--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
         <h1 class="title">Tic Tac Toe</h1>
-        <h2>Result : <span id="result"></span></h2>
+        <h2 class="close" id="result"></h2>
         <div class="container" id="container">
             <div class="card pointer" data-index="0"></div>
             <div class="card pointer" data-index="1"></div>
